[gd_scene load_steps=17 format=2]

[ext_resource path="res://Orb.gd" type="Script" id=1]
[ext_resource path="res://assets/beep.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/SF-breathe.mp3" type="AudioStream" id=3]

[sub_resource type="PhysicsMaterial" id=9]
bounce = 0.56

[sub_resource type="CylinderShape" id=1]
radius = 0.3
height = 1.0

[sub_resource type="SphereMesh" id=2]
radius = 0.7
height = 1.4

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_color = Color( 1, 0, 0.956863, 0.333333 )
metallic = 0.43
roughness = 0.0

[sub_resource type="SphereMesh" id=4]
radius = 0.2
height = 0.4

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 1, 0, 0.956863, 0.333333 )
roughness = 0.0
emission_enabled = true
emission = Color( 0, 0.964706, 1, 1 )
emission_energy = 0.91
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 1.3
gravity = Vector3( 0, 0, 0 )
radial_accel = -11.76

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
albedo_color = Color( 0.756863, 0, 1, 1 )
emission_enabled = true
emission = Color( 0, 0.764706, 1, 1 )
emission_energy = 10.54
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=8]
material = SubResource( 7 )
radius = 0.04
height = 0.08
radial_segments = 16
rings = 8

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector3( 0, 40, 0 )
linear_accel = -1.96
radial_accel = -39.21
tangential_accel = -3.92

[sub_resource type="SpatialMaterial" id=12]
flags_transparent = true
albedo_color = Color( 0.756863, 0, 1, 0.0235294 )
emission_enabled = true
emission = Color( 0, 0.764706, 0.819608, 1 )
emission_energy = 3.43
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=13]
material = SubResource( 12 )
radius = 0.2
height = 0.4
radial_segments = 16
rings = 8

[sub_resource type="CapsuleShape" id=14]
radius = 0.3

[node name="Orb" type="RigidBody"]
collision_layer = 0
collision_mask = 2
mode = 2
physics_material_override = SubResource( 9 )
linear_damp = 3.0
script = ExtResource( 1 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.48491, 0 )
stream = ExtResource( 2 )
attenuation_model = 1
unit_db = -2.832
unit_size = 11.7
max_db = 0.345
pitch_scale = 0.57
autoplay = true
bus = "orbsound"

[node name="Disapear" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.48491, 0 )
stream = ExtResource( 3 )
attenuation_model = 1
unit_size = 12.0
max_db = 0.345
pitch_scale = 0.57
bus = "orbsound"

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0247874, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.41981, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Inner" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.41981, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.48491, 0 )
lifetime = 0.3
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 8 )

[node name="Particles2" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.48491, 0 )
lifetime = 1.23
process_material = SubResource( 11 )
draw_pass_1 = SubResource( 13 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.47646, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 14 )

[node name="Timer" type="Timer" parent="."]
wait_time = 16.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
